refactor: update jany.execution config